--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,7 @@ body {
   align-items: center;
   background: rgba(0, 0, 0, 0.787);
   overflow: hidden;
+  min-height: 100vh;
 }
 
 button {
@@ -141,6 +142,7 @@ button:focus {
     var(--card-transicao-tipo-saida);
   user-select: none;
 }
+
 .card::before {
   content: "";
   position: absolute;
@@ -222,7 +224,7 @@ button:focus {
 }
 .info .nome,
 .info .localizacao {
-  texto-transform: uppercase;
+text-transform: uppercase;
 }
 .info .localizacao {
   font-weight: 800;
@@ -301,4 +303,43 @@ button:focus {
     --card-largura: 250px;
     --card-altura: 400px;
   }
+}
+
+ul {
+  
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+ul li{
+  position: relative;
+  list-style: none;
+}
+
+ul li a{
+  position: relative;
+  font-size: 2em;
+  text-decoration: none;
+  line-height: 1em;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: transparent;
+  -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
+}
+
+ul li a::before {
+  content: attr(data-text);
+  position: absolute;
+  color: var(--clr);
+  width: 0;
+  overflow: hidden;
+  transition: 1s;
+  border-right: 8px solid var(--clr);
+  -webkit-text-stroke: 1px var(--clr);
+}
+
+ul li a:hover::before {
+  width: 100%;
+  filter: drop-shadow(0 0 25px var(--clr));
 }
